--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <div class="container">
-        <div id="ticket-list-box" class="ticket-list-box">
-
+        <div id="ticket-list" class="ticket-list">
         </div>
     </div>
     <!-- <script src="./js/data.js"></script> -->
