--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <div class="container">
         <div id="ticket-list" class="ticket-list">
         </div>
+        <div id="unselect" class="unselect"></div>
+        <div id="buy-ticket-box" class="buy-ticket-box">
+        </div>
     </div>
     <!-- <script src="./js/data.js"></script> -->
+    <script src="./view/static/js/eventHub.js"></script>
     <script src="./view/static/js/ticket-list.js"></script>
+    <script src="./view/static/js/buy-ticket.js"></script>
 </body>
 
 </html>
