增加订单正常，查询全部订单不可用

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body>
     <div class="container">
-        <div id="ticket-list" class="ticket-list">
-        </div>
+        <div id="ticket-list" class="ticket-list"></div>
         <div id="unselect" class="unselect"></div>
-        <div id="buy-ticket-box" class="buy-ticket-box">
-        </div>
+        <div id="buy-ticket-box" class="buy-ticket-box"></div>
+        <div class="query-ticket-box" id="query-ticket-box"></div>
     </div>
     <!-- <script src="./js/data.js"></script> -->
+
     <script src="./view/static/js/eventHub.js"></script>
     <script src="./view/static/js/ticket-list.js"></script>
     <script src="./view/static/js/buy-ticket.js"></script>
+    <script src="./view/static/js/query-ticket.js"></script>
 </body>
-
 </html>
